# terraable

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .mlc_config.json  .yamllint.yml  CODEOWNERS  CONTRIBUTING.md  DEVELOP.md  DOCKER.md  Dockerfile  LICENSE  README.md  SECURITY.md  build_output.txt  demo_config.py  docker-compose.demo-overrides.yml  docker-compose.yml  mypy.ini  package-lock.json  package.json  pr48_review_threads_pages.json  pr48_review_threads_summary.json  pr49_review_threads_pages.json  pyproject.toml  ruff.toml  test_coverage_report.txt  test_results.txt
.devcontainer/: Dockerfile  devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: AGENTS.md  copilot-instructions.md  pull_request_template.md
ansible/: ansible.cfg  inventory.yml
docs/: architecture-overview.md  credentials-matrix.md  handoff-contract.md  hcp-terraform.md  lab-guide.md  mvp-demo-runbook.md  repository-labels.md  target-capabilities.json
integration/: README.md
scripts/: check-doc-consistency.sh  check-target-capabilities.py  check-tools.sh  configure-branch-protection.sh
terraable/: __init__.py  api_server.py  aws_backend.py  azure_backend.py  contract.py  demo_config.py  hcp_terraform.py  local_detect.py  local_lab.py  okd_backend.py  orchestrator.py
terraform/: README.md
tests/: conftest.py  test_api_server.py  test_cloud_backends.py  test_contract.py  test_demo_config.py  test_demo_endpoints.py  test_hcp_terraform.py  test_local_detect.py  test_local_lab.py  test_orchestrator.py  test_package.py  test_ui_index.py
(+62 files in other folders)
