[tool.poetry]
name = "terraable"
version = "0.1.0"
description = "Reference demo: HCP Terraform provisioning + Ansible Automation Platform operationalisation"
authors = ["kpeacocke <kpeacocke@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ansible = "^12.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-terraform = "^0.7.0"
mutmut = "^2.4.5"
ruff = "^0.11"
mypy = "^1.7.0"
ansible-lint = "^25.12.0"
types-pyyaml = "^6.0.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=terraable --cov-report=html --cov-report=term-missing --strict-markers -p no:pytest_terraform.plugin"
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "slow: slow tests"
]

[tool.coverage.run]
source = ["terraable"]
omit = ["*/tests/*", "*/site-packages/*"]

[tool.coverage.report]
fail_under = 100
skip_covered = false

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
strict_equality = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "ansible.*"
ignore_missing_imports = true
